welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: value vuBiscuit is not a member of object Boolean
  Boolean vuBiscuit=false
          ^Program:7: error: not found: value vuBiscuit
        vuBiscuit=true
        ^Program:9: error: not found: value vuBiscuit
    return vuBiscuit
           ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (y <- 1 to 6){
         ^